index.html sent to root

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reebok e-commerce</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/Navbar/index.css" />
   </head>
   <body>
     <div class="navbar">
-      <div id="logo"><a href="./index.html">Reebok</a></div>
+      <div id="logo"><a href="index.html">Reebok</a></div>
       <div id="links">
         <a href="../MensPage/mens.html">Men</a>
         <a href="../WomensPage/womens.html">Women</a>
@@ -36,4 +36,4 @@
   </body>
 </html>
 
-<script src="./index.js"></script>
+<script src="../E-commerce(Reebok)/Navbar/index.js"></script>
