--- a/MensPage/mens.html
+++ b/MensPage/mens.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="navbar">
-      <div id="logo"><a href="../Navbar/index.html">Reebok</a></div>
+      <div id="logo"><a href="index.html">Reebok</a></div>
       <div id="links">
         <a href="../MensPage/mens.html">Men</a>
         <a href="../WomensPage/womens.html">Women</a>
