--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reebok e-commerce</title>
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="navbar">
@@ -36,4 +36,4 @@
   </body>
 </html>
 
-<script src="/index.js"></script>
+<script src="index.js"></script>
