--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="navbar">
       <div id="logo"><a href="index.html">Reebok</a></div>
       <div id="links">
-        <a href="../MensPage/mens.html">Men</a>
-        <a href="../WomensPage/womens.html">Women</a>
+        <a href="MensPage/mens.html">Men</a>
+        <a href="WomensPage/womens.html">Women</a>
         <a href="">Cart <span> 🛒</span></a>
-        <a href="../LoginPage/login.html">Logout</a>
+        <a href="LoginPage/login.html">Logout</a>
       </div>
     </div>
 
