--- a/LoginPage/login.html
+++ b/LoginPage/login.html
@@ -10,8 +10,8 @@
     <div class="navbar">
       <div id="logo">Reebok</div>
       <div id="links">
-        <a href="../MensPage/mens.html">Men</a>
-        <a href="../WomensPage/womens.html">Women</a>
+        <a href="MensPage/mens.html">Men</a>
+        <a href="WomensPage/womens.html">Women</a>
         <a
           href="../LoginPage/login.html
             "
