--- a/MensPage/mens.html
+++ b/MensPage/mens.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reebok</title>
     <link rel="stylesheet" href="./mens.css" />
+    <base href="https://hemanthvattam25.github.io/Reebok-Application/" />
+
   </head>
   <body>
     <div class="navbar">
-      <div id="logo"><a href="../Reebok-Application/index.html">Reebok</a></div>
+      <div id="logo"><a href="index.html">Reebok</a></div>
       <div id="links">
         <a href="../MensPage/mens.html">Men</a>
         <a href="../WomensPage/womens.html">Women</a>
